--- a/web/index.html
+++ b/web/index.html
@@ -1,60 +1,187 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="sr">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hello World - EV Chargers</title>
+    <title>EV Punjači - Mapa</title>
+
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+    />
+
     <style>
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-      }
+      * { margin: 0; padding: 0; box-sizing: border-box; }
 
       body {
-        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-          Oxygen, Ubuntu, Cantarell, sans-serif;
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
         min-height: 100vh;
         display: flex;
-        justify-content: center;
-        align-items: center;
+        flex-direction: column;
+      }
+
+      header {
         background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
         color: white;
+        padding: 1rem 2rem;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        flex-wrap: wrap;
+        gap: 1rem;
       }
 
-      .container {
+      h1 { font-size: 1.5rem; }
+
+      .search-form {
+        display: flex;
+        gap: 0.5rem;
+        align-items: center;
+      }
+
+      input[type="text"] {
+        padding: 0.6rem 1rem;
+        font-size: 1rem;
+        border: none;
+        border-radius: 6px;
+        width: 200px;
+      }
+
+      button {
+        padding: 0.6rem 1.2rem;
+        font-size: 1rem;
+        border: none;
+        border-radius: 6px;
+        background: white;
+        color: #667eea;
+        cursor: pointer;
+      }
+
+      .sync-btn {
+        background: rgba(255,255,255,0.2);
+        color: white;
+        border: 1px solid rgba(255,255,255,0.3);
+      }
+
+      #status {
+        font-size: 0.9rem;
+        padding: 0.5rem 1rem;
+        background: rgba(255,255,255,0.1);
+        border-radius: 6px;
+      }
+
+      #map { flex: 1; min-height: 500px; }
+
+      footer {
+        background: #333;
+        color: white;
+        padding: 0.8rem;
         text-align: center;
-        padding: 2rem;
-      }
-
-      h1 {
-        font-size: 3rem;
-        margin-bottom: 1rem;
-        animation: fadeIn 1s ease-in;
-      }
-
-      p {
-        font-size: 1.2rem;
-        opacity: 0.9;
-        animation: fadeIn 1s ease-in 0.5s both;
-      }
-
-      @keyframes fadeIn {
-        from {
-          opacity: 0;
-          transform: translateY(20px);
-        }
-        to {
-          opacity: 1;
-          transform: translateY(0);
-        }
+        font-size: 0.85rem;
       }
     </style>
   </head>
+
   <body>
-    <div class="container">
-      <h1>Hello World!</h1>
-      <p>Welcome to EV Chargers API</p>
-    </div>
+    <header>
+      <h1>⚡ EV Punjači - Srbija</h1>
+
+      <div class="search-form">
+        <input
+          type="text"
+          id="townInput"
+          placeholder="Unesite grad"
+          value=""
+        />
+        <button id="searchBtn">Pretraži</button>
+        <button id="syncBtn" class="sync-btn">Sync OCM</button>
+      </div>
+
+      <div id="status"></div>
+    </header>
+
+    <div id="map"></div>
+
+    <footer>
+      Podaci: <a href="https://openchargemap.org" target="_blank" style="color:#667eea">
+        Open Charge Map
+      </a>
+    </footer>
+
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+
+    <script>
+      const API_ID = 'tfeyiis7fg';
+
+      const API_BASE_URL =
+        `http://localhost:4566/restapis/${API_ID}/dev/_user_request_`;
+
+      const map = L.map('map').setView([44.0165, 21.0059], 7);
+
+      L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+        attribution: '© OpenStreetMap contributors',
+      }).addTo(map);
+
+      let markersLayer = L.layerGroup().addTo(map);
+
+      function displayChargers(chargers) {
+        markersLayer.clearLayers();
+
+        if (!chargers.length) {
+          document.getElementById('status').textContent =
+            'Nema punjača za ovaj grad';
+          return;
+        }
+
+        const bounds = [];
+
+        chargers.forEach(c => {
+          if (!c.latitude || !c.longitude) return;
+
+          const marker = L.marker([c.latitude, c.longitude]).addTo(markersLayer);
+          marker.bindPopup(`
+            <b>${c.title || 'EV Punjač'}</b><br/>
+            ${c.addressLine1 || ''}<br/>
+            ${c.town}<br/>
+            Priključci: ${c.numberOfPoints ?? 'N/A'}
+          `);
+
+          bounds.push([c.latitude, c.longitude]);
+        });
+
+        map.fitBounds(bounds, { padding: [50, 50] });
+        document.getElementById('status').textContent =
+          `Prikazano ${chargers.length} punjača`;
+      }
+
+      async function searchChargers(town) {
+        document.getElementById('status').textContent = 'Učitavanje...';
+
+        const res = await fetch(
+          `${API_BASE_URL}/chargers/${encodeURIComponent(town)}`
+        );
+
+        const data = await res.json();
+        if (!res.ok) {
+          document.getElementById('status').textContent = data.error;
+          return;
+        }
+
+        displayChargers(data.chargers);
+      }
+
+      async function syncOCM() {
+        document.getElementById('status').textContent = 'Sinhronizacija...';
+        const res = await fetch(`${API_BASE_URL}/sync`);
+        const data = await res.json();
+        document.getElementById('status').textContent =
+          `Upisano: ${data.count}, obrisano: ${data.deleted}`;
+      }
+
+      document.getElementById('searchBtn').onclick = () =>
+        searchChargers(document.getElementById('townInput').value.trim());
+
+      document.getElementById('syncBtn').onclick = syncOCM;
+    </script>
   </body>
 </html>
