--- a/web/index.html
+++ b/web/index.html
@@ -111,7 +111,7 @@
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 
     <script>
-      const API_ID = 'tfeyiis7fg';
+      const API_ID = 'tvmaw0nf6r';
 
       const API_BASE_URL =
         `http://localhost:4566/restapis/${API_ID}/dev/_user_request_`;
